--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Patagonian</a>
+    <a class="navbar-brand" href="">Patagonian</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,22 +15,22 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Proyectos</a>
+          <a class="nav-link" href="/proyectos">Proyectos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Quienes Somos</a>
+          <a class="nav-link" href="/quienes">Quienes Somos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Contacto</a>
+          <a class="nav-link" href="/contacto">Contacto</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<app-home-component></app-home-component>
+<!-- <app-home-component></app-home-component> -->
 
 <router-outlet></router-outlet>
